manifests/semaphore/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"semaphore","namespace":"semaphore"},"spec":{"ports":[{"port":80,"targetPort":3000}],"selector":{"app":"semaphore"}}}
    name: semaphore
    namespace: semaphore
  spec:
    clusterIP: 10.109.78.14
    clusterIPs:
    - 10.109.78.14
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
    selector:
      app: semaphore
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
